# 3d-metrology-reconstruction

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
scripts/: analyze_debug.py  check_alignment.py  inspect_exr.py  run_all.py  verify_z.py  visualize_cloud.py  visualize_filtered.py  visualize_full.py  visualize_interactive.py
src/: Camera.cpp  Camera.hpp  Decoder.cpp  Decoder.hpp  Intersection.cpp  Intersection.hpp  Reconstructor.cpp  Reconstructor.hpp  Structs.hpp  main.cpp  test_exr.cpp
tests/: dummy_matches.csv
